// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnHeader snapshots should render ColumnHeader 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="SectionColumn__labels SectionColumn__labels--light"
      style="width: calc(100% - 48px - 2.5px - 8px);"
    />
    <div
      class="SectionColumn__wrapper SectionColumn__wrapper--light"
    >
      <div
        class="SectionColumn__content SectionColumn__content--light"
        style="width: calc(100% - 48px - 2.5px - 8px);"
      >
        <small
          class="css-wcnq0t Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
          data-test-text=""
          style="text-align: inherit;"
        >
          Frame
        </small>
      </div>
      <div
        class="SectionColumn__buttons SectionColumn__buttons--light"
      >
        <div
          class="css-wcnq0t ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
        >
          <div
            class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="html-tag"
            height="14"
            name="HtmlTag"
            width="14"
          />
        </div>
        <div
          class="css-wcnq0t ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
        >
          <div
            class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="component"
            height="14"
            name="Component"
            width="14"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnHeader snapshots should render with multiple selects 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="SectionColumn__labels SectionColumn__labels--light"
      style="width: calc(100% - 48px - 2.5px - 8px);"
    />
    <div
      class="SectionColumn__wrapper SectionColumn__wrapper--light"
    >
      <div
        class="SectionColumn__content SectionColumn__content--light"
        style="width: calc(100% - 48px - 2.5px - 8px);"
      >
        <small
          class="css-wcnq0t Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
          data-test-text=""
          style="text-align: inherit;"
        >
          2 selected
        </small>
      </div>
      <div
        class="SectionColumn__buttons SectionColumn__buttons--light"
      >
        <div
          class="css-wcnq0t ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
        >
          <div
            class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="html-tag"
            height="14"
            name="HtmlTag"
            width="14"
          />
        </div>
        <div
          class="css-wcnq0t ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
        >
          <div
            class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="component"
            height="14"
            name="Component"
            width="14"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
